--- a/styles/team.css
+++ b/styles/team.css
@@ -43,11 +43,19 @@ h2 {
 
 h2 {
   font-size: 42px;
+  margin-block-start: 0em;
 }
 
 p,
 a {
   font-family: "Azo Sans Lt";
+}
+
+.parallax {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 #nav-page {
@@ -146,10 +154,6 @@ header {
 #kitchen {
   background-image: url("../assets/backgrounds/7B2A1435ok-1-1250x833.jpg");
   height: 420px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -167,10 +171,6 @@ header {
 #harvest {
   background-image: url("../assets/backgrounds/7B2A0164okGiancarlo-Aponte-1250x833.jpg");
   height: 420px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
 }
 
 #bar {
@@ -201,10 +201,6 @@ header {
 
 #wine-waiter {
   background-image: url("../assets/backgrounds/ayg-vinos-4-1400x789.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
   height: 420px;
   display: flex;
   flex-direction: column;
@@ -417,4 +413,207 @@ select {
 
 #error-file {
   top: 391px;
+}
+
+@media screen and (max-width: 1150px) {
+  .saloon-text,
+  .bar-text {
+    width: 40%;
+  }
+
+  #saloon img,
+  #bar img {
+    width: 60%;
+  }
+
+  .saloon-text p,
+  .bar-text p,
+  .kitchen-text {
+    width: 90%;
+  }
+
+  .join-us-text {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  footer {
+    height: 455px;
+    display: grid;
+    grid-template-columns: repeat(12, 8%);
+    grid-template-rows: auto auto;
+  }
+
+  .contact {
+    width: max-content;
+    grid-column-start: 2;
+    grid-row-start: 1;
+  }
+
+  .on-place {
+    grid-row-start: 1;
+    grid-column-start: 8;
+    width: max-content;
+  }
+
+  .take-away {
+    grid-row-start: 2;
+    grid-column-start: 8;
+    width: max-content;
+    align-self: start;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .parallax {
+    background-attachment: initial;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #nav-page {
+    flex-direction: column;
+    background-color: white;
+    z-index: 1;
+    width: 100%;
+    padding: 0;
+  }
+
+  .fade-white h1 {
+    position: absolute;
+    top: 220px;
+    left: 5%;
+    right: 5%;
+    line-height: normal;
+  }
+
+  #saloon,
+  #bar {
+    height: 600px;
+    flex-direction: column;
+  }
+
+  .saloon-text,
+  .bar-text {
+    height: 300px;
+    width: 90%;
+    margin: auto;
+  }
+
+  #saloon img,
+  #bar img {
+    height: 300px;
+    width: 100%;
+  }
+
+  .wine-waiter-text,
+  .join-us-text {
+    width: 90%;
+  }
+
+  #kitchen {
+    display: flex;
+  }
+
+  .kitchen-text {
+    margin: auto;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  footer {
+    display: flex;
+    flex-direction: column;
+    height: 600px;
+    align-items: normal;
+    justify-content: normal;
+    padding: 20px;
+  }
+
+  .contact {
+    margin-bottom: 1em;
+  }
+
+  .take-away {
+    align-self: initial;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  h2 {
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  footer {
+    height: 480px;
+  }
+
+  footer,
+  footer p,
+  footer a {
+    font-size: 13px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  h2 {
+    font-size: 28px;
+  }
+
+  #nav-page {
+    justify-content: initial;
+  }
+
+  #nav-page nav ul {
+    column-gap: 85px;
+    flex-wrap: wrap;
+    width: 90%;
+    justify-content: center;
+    margin: auto;
+    margin-bottom: 20px;
+  }
+
+  .fade-white h1 {
+    font-size: 40px;
+  }
+
+  #saloon,
+  #bar {
+    height: 800px;
+  }
+
+  .saloon-text,
+  .bar-text,
+  #saloon img,
+  #bar img {
+    height: 400px;
+  }
+
+  #kitchen,
+  #join-us {
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #nav-page nav ul {
+    column-gap: 50px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  #saloon {
+    height: 900px;
+  }
+
+  .saloon-text {
+    height: 500px;
+  }
+
+  #kitchen {
+    height: 600px;
+  }
 }
