--- a/styles/team.css
+++ b/styles/team.css
@@ -315,7 +315,24 @@ form {
 
 .middle-form {
   display: flex;
-  gap: 10px;
+  gap: 3%;
+}
+
+#firstname-bloc,
+#lastname-bloc,
+#city-bloc,
+#country-bloc {
+  width: 48%;
+  position: relative;
+}
+
+#email-bloc,
+#phone-bloc,
+#nationality-bloc,
+#contract-bloc,
+#work-bloc,
+#file-bloc {
+  position: relative;
 }
 
 form label {
@@ -334,6 +351,12 @@ form input {
 #phone,
 #nationality {
   width: 99%;
+}
+
+#work,
+#contract {
+  width: 100.5%;
+  height: 34px;
 }
 
 .job {
@@ -372,47 +395,20 @@ select {
   font-family: "GT Sectra Display";
 }
 
-#error-lastname {
-  top: 35px;
-}
-
-#error-firstname {
-  top: 35px;
-  right: 162px;
-}
-
-#error-email {
-  top: 91px;
-}
-
-#error-phone {
-  top: 147px;
-}
-
-#error-city {
-  top: 203px;
-}
-
-#error-country {
-  top: 203px;
-  right: 179px;
-}
-
-#error-nationality {
-  top: 259px;
-}
-
-#error-work {
-  top: 337px;
-}
-
-#error-contract {
-  top: 337px;
-  right: 183px;
-}
-
+#error-lastname,
+#error-firstname,
+#error-email,
+#error-phone,
+#error-nationality,
+#error-country,
+#error-city,
 #error-file {
-  top: 391px;
+  top: 35px;
+}
+
+#error-work,
+#error-contract {
+  top: 65px;
 }
 
 @media screen and (max-width: 1150px) {
@@ -434,6 +430,16 @@ select {
 
   .join-us-text {
     width: 50%;
+  }
+
+  form label {
+    font-size: 13px;
+    padding: 0px 0px 5px;
+  }
+
+  #error-work,
+  #error-contract {
+    top: 56px;
   }
 }
 
@@ -462,6 +468,30 @@ select {
     grid-column-start: 8;
     width: max-content;
     align-self: start;
+  }
+}
+
+@media screen and (max-width: 910px) {
+  .modal-content h2 {
+    font-size: 32px;
+    margin-top: 30px;
+  }
+
+  .middle-form {
+    flex-direction: column;
+  }
+
+  #lastname-bloc,
+  #firstname-bloc,
+  #city-bloc,
+  #country-bloc {
+    width: 99%;
+  }
+
+  #lastname-bloc,
+  #city-bloc,
+  #work-bloc {
+    margin-bottom: 22px;
   }
 }
 
@@ -544,9 +574,22 @@ select {
   h2 {
     font-size: 32px;
   }
+
+  .modal-content {
+    width: 80%;
+  }
 }
 
 @media screen and (max-width: 600px) {
+  .modal-content {
+    width: 100%;
+    height: 100%;
+  }
+
+  .modal-content h2 {
+    margin-top: 50px;
+  }
+
   footer {
     height: 480px;
   }
