--- a/styles/pages/products.css
+++ b/styles/pages/products.css
@@ -131,3 +131,115 @@ header {
   height: 350px;
   object-fit: cover;
 }
+
+@media screen and (max-width: 1250px) {
+  .christmas-product,
+  .ice-cream-product,
+  .pie-product,
+  .cake-product,
+  .confectionery-product {
+    width: 49%;
+  }
+}
+
+@media screen and (max-width: 1060px) {
+  .modal-content {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1040px) {
+  .christmas-product,
+  .ice-cream-product,
+  .pie-product,
+  .cake-product,
+  .confectionery-product {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .modal-content img,
+  .modal-content .no-image {
+    width: 250px;
+    height: 350px;
+  }
+}
+
+@media screen and (max-width: 670px) {
+  .modal-content {
+    flex-direction: column-reverse;
+  }
+
+  .modal-content img,
+  .modal-content .no-image {
+    width: 100%;
+    height: 250px;
+  }
+
+  .product-descriptions {
+    padding: 30px 0px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .christmas-product,
+  .ice-cream-product,
+  .pie-product,
+  .cake-product,
+  .confectionery-product {
+    flex-direction: column-reverse;
+    height: initial;
+  }
+
+  .christmas-product-descriptions,
+  .ice-cream-product-descriptions,
+  .pie-product-descriptions,
+  .cake-product-descriptions,
+  .confectionery-product-descriptions {
+    width: 95%;
+  }
+
+  .christmas-product-descriptions p,
+  .ice-cream-product-descriptions p,
+  .pie-product-descriptions p,
+  .cake-product-descriptions p,
+  .confectionery-product-descriptions p,
+  h3 {
+    margin-block-start: 0em;
+    margin-block-end: 1em;
+  }
+
+  .christmas-product-descriptions-description,
+  .ice-cream-product-descriptions-description,
+  .pie-product-descriptions-description,
+  .cake-product-descriptions-description,
+  .confectionery-product-descriptions-description {
+    height: 19px;
+  }
+
+  .christmas-product img,
+  .ice-cream-product img,
+  .pie-product img,
+  .cake-product img,
+  .confectionery-product img,
+  .no-image {
+    height: 100px;
+    width: 100%;
+  }
+
+  .modal-content {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  #modal h3 {
+    font-size: 18px;
+  }
+
+  .product-descriptions {
+    padding: 10px;
+  }
+}
