--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -4,6 +4,7 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
 
 #nav-page {
@@ -17,11 +18,8 @@ header {
   text-transform: uppercase;
   padding-left: 5%;
   padding-right: 5%;
-}
-
-#nav-page {
+  background-color: white;
   z-index: 1;
-  transition: background-color 1s;
 }
 
 header img,
@@ -68,12 +66,15 @@ header nav ul li a:hover,
 }
 
 header h1 {
-  line-height: 380px;
   text-align: center;
   margin-block-start: 0em;
   text-transform: uppercase;
   font-size: 59px;
   font-weight: 500;
+  position: absolute;
+  top: 190px;
+  left: 5%;
+  right: 5%;
 }
 
 @media screen and (max-width: 800px) {
@@ -81,17 +82,14 @@ header h1 {
   #nav-page {
     flex-direction: column;
     background-color: white;
-    z-index: 1;
     width: 100%;
     padding: 0;
   }
 
   header h1 {
-    position: absolute;
     top: 220px;
     left: 5%;
     right: 5%;
-    line-height: normal;
   }
 }
 
